--- a/src/styles/product.scss
+++ b/src/styles/product.scss
@@ -23,11 +23,22 @@
   box-shadow: none !important;
 }
 
+.product-image {
+  height: 55vh;
+  background-size: cover;
+}
+
 .buy-button {
   @include buttonStyle(#d4aa63, 10px);
 }
 
 .buy-button:focus, .cancel-button:focus, .clear-cart-button:focus {
   box-shadow: 0 0 0 0.25rem rgb(166 161 154 / 25%) !important;
+}
+
+@media (max-width: 800px) {
+  .product-image {
+    height: 35vh;
+  }
 }
 
